--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
       });
     }
   </script>
-  <script src="main.dart.js" type="application/javascript"></script>
+  <script src="/flutter_zzz_blog/build/main.dart.js" type="application/javascript"></script>
 </body>
 </html>
