--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('/flutter_zzz_blog/build/flutter_service_worker.js?v=1720023820');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=1720023820');
       });
     }
   </script>
-  <script src="/flutter_zzz_blog/build/main.dart.js" type="application/javascript"></script>
+  <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
